--- a/HeyPrettySkins/public/HeyPrettySkins.css
+++ b/HeyPrettySkins/public/HeyPrettySkins.css
@@ -174,6 +174,13 @@ table.contain {
 
 }
 
+.mt-2 {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 1.5rem;
+	font-weight: bold;
+	color: #34302F;
+}
+
 #second-tablerow {
 	background-color: #F42B6D;
 	height: 6vh;
@@ -189,8 +196,8 @@ table.contain {
 .product-info-col img{
 	margin-bottom: 25px;
 	padding: 10 10 6 28;
-	width: 11rem;
-	height: 7rem;
+	width: 10rem;
+	height: 10rem;
 	float: left;
 }
 
@@ -385,6 +392,13 @@ select, .product-select {
     border-radius: 5px;
     box-sizing: border-box;
     text-align: center;
+}
+
+#product_price {
+    width: 18vw;
+    height: 4.5vh;
+	border: 1px solid #ccc;
+    border-radius: 5px;
 }
  
 #product_description {
@@ -704,6 +718,19 @@ input[type=button] {
 	text-align:left;
 }
 
+.order-products-col-2 {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 1.2rem;
+	color: #34302F;
+	padding-left: 20px;
+	text-align: left;
+}
+
+.total_price {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 1.2rem;
+	color: #34302F;
+}
 .order_qty {
     width: 10vw;
     height: 5vh;
@@ -716,14 +743,6 @@ input[type=button] {
     text-align: center;
 	font-size: 0.9vw;
 	font-family: 'Montserrat', sans-serif;
-}
-
-.order-products-col-2 {
-	font-family: 'Montserrat', sans-serif;
-	font-size: 1.2rem;
-	color: #34302F;
-	padding-left: 20px;
-	text-align: left;
 }
 /**END OF CREATE ORDER PAGE**/
 
@@ -860,29 +879,33 @@ a, a:hover, a:focus {
 }
 
 /* SUB MENUS */
-.sub-menu {
-	display: block;
-	text-align: left;
-	padding: 10px 0 10px 0;
-  }
- .sub-menu-2, .sub-menu-contents-2 a {
-	display: block;
-	width: 70%;
+.sub-menu-contents-2 {
+	display: none;
+	position: absolute;
    
-	font-size: 16px;
+	background-color: white;
+	margin-left: 10vw;
 	 
-	text-align: left;
-   
-	padding: 15px;
-	margin-left: 20px;  
-	border-radius: 10px 10px 10px 10px;
-	cursor: pointer;
+	 border-radius: 10px 10px 10px 10px;
+	 z-index: 1;
   }
    
-  .sub-menu-2, .sub-menu-2:hover {
-	color: inherit;
-	text-decoration: none;
-	transition: all 0.2s;
+  .sub-menu-contents-2 x-nav-link {
+	color: #444;
+	position: relative;
+  }
+   
+	li.sub-menu-2, li.sub-menu-2:hover .sub-menu-contents-2  {
+	  display: block!important;
+	}
+   
+	li.sub-menu-2 .sub-menu-contents-2:hover x-nav-link {
+	/*background: White;*/
+	color: #F42B6D;
+	border-radius: 10px 10px 10px 10px;
+	margin-left: 10%;
+	margin-right: 10%;
+	top: 0;
   }
 
 /*accordion dropdown*/
@@ -1038,7 +1061,7 @@ a.cp {
 	margin-bottom: 25px;
 	padding: 10 10 6 28;
 	width: 9rem;
-	height: 6rem;
+	height: 9rem;
 	float: left;
 }
 
